# cmake_app

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt
src/Bar/: CMakeLists.txt  bar.cpp  bar.h
src/Foo/: CMakeLists.txt  foo.cpp  foo.h
